--- a/feature-reporting/pom.xml
+++ b/feature-reporting/pom.xml
@@ -29,7 +29,7 @@
     <parent>
         <artifactId>validation</artifactId>
         <groupId>org.verapdf</groupId>
-        <version>1.10.0</version>
+        <version>1.10.0-HTG</version>
     </parent>
 
     <artifactId>feature-reporting</artifactId>
