--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,7 @@
     <verapdf.parser.version>[1.10.0,1.11.0)</verapdf.parser.version>
     <verapdf.pdfmodel.version>[1.10.0,1.11.0)</verapdf.pdfmodel.version>
     <verapdf.library.version>[1.10.0,1.11.0)</verapdf.library.version>
-    <verapdf.xmp.version>[0.12.0-HTG,0.13.0)</verapdf.xmp.version>
+    <verapdf.xmp.version>0.12.0-HTG</verapdf.xmp.version>
   </properties>
 
   <dependencyManagement>
